src/sass/likes.scss
.likes {
	&__button {
		display: flex;
		place-items: center;
		gap: 1ch;
		font-size: 1.5rem;
		background: transparent;
		padding: 0;
		color: inherit;

		&[hidden] {
			display: none;
		}

		&::before {
			display: none;
		}

		> * {
			vertical-align: baseline;
		}

		&:not([disabled]) {
			cursor: pointer;

			&:hover {
				.reactions__icon {
					color: var(--accent-color);
				}
			}
		}

		&[disabled] {
			.reactions__icon {
				color: var(--accent-color);
			}
		}
	}

	&__icon {
		position: relative;
		display: inline-block;
		color: var(--fg-color);
		z-index: 1;

		svg {
			width: 2.5rem;
			height: 2.5rem;
		}

		.is--animated > & {
			color: var(--pop-color);
			transition: text-shadow ease-out 0.2s;
		}

		:is([disabled]) > &,
		:not(.is--animated):hover > & {
			color: var(--accent-color);
		}

		.is--animated > &::before {
			content: '';
			position: absolute;
			top: -1.4rem;
			left: -1.3rem;
			width: 5rem;
			height: 5rem;
			z-index: -1;
			background: repeating-conic-gradient(
				from 0deg at 50% 50%,
				var(--accent-color) 0%,
				var(--accent-color) 3%,
				rgba(0, 0, 0, 0) 3%,
				rgba(0, 0, 0, 0) 10%
			);
			animation: likes-bling 5s linear 1;
		}
	}
}

